2006-09-20 Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/items/generic-whitefur.png, 
	data/graphics/items/generic-cavesnakelamp.png, 
	data/graphics/items/generic-hardspike.png, 
	data/graphics/items/generic-pinkantennae.png,
	data/graphics/items/Makefile.am, data/items.xml: 
	Added drops for new monsters.

2006-09-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/Makefile.am: Added missing monster19 sprite.

2006-09-17  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/Makefile.am: Added missing maps.
	* data/maps/new_10-1.tmx.gz: Disabled layer compression.

2006-09-18  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_9-1.tmx.gz: Fixed some mapping bugs (new walkmap
	required).

2006-09-17  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_10-1.tmx.gz: Fixed transparent snow issue (Fix by
	Pajarico).

2006-09-17  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/game.cpp: Stop using the sticky window attribute which is
	unneeded for the current implementation, instead adjust the set of
	affected windows by the 'hide' shortcut.

2006-09-17  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_14-1.tmx.gz, data/maps/new_15-1.tmx.gz,
	data/maps/new_16-1.tmx.gz: fixed some mapping errors.

2006-09-16  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animatedsprite.cpp, src/animatedsprite.h:
	Fixed the crash when attacking without a weapon, some additional stability
	improvements and more descriptive variable names in the parsing
	algorithmn.

2006-09-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/help/changes.txt, data/help/header.txt, NEWS, README,
	src/tmw.rc: Updated release infos.

2006-09-14  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animation.h, src/animatedsprite.h,
	data/graphics/sprites/weapon.xml: Some modifications at the animation
	system. No more "undefined action foo" warnings in the tmw.log. Not
	visible actions must now be declared explicitely.